--- a/client/src/index.css
+++ b/client/src/index.css
@@ -782,6 +782,34 @@ button:focus-visible {
     cursor: not-allowed;
 }
 
+.search-bar {
+  display: flex;
+  align-items: center;
+  background-color: #eaeaea;
+  border-radius: .5rem;
+  max-width: 100%;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  margin: 1rem 1rem 0.5rem;
+}
+.search-bar svg{
+  margin-left: .5rem;
+  color: #4a4a4a;
+}
+
+.search-bar input {
+  padding: .5rem;
+  border: none;
+  background-color: #eaeaea;
+  border-radius: 0;
+  height: 100%;
+  width: 100%;
+  color: #4a4a4a;
+}
+.search-bar input:focus, .search-bar input:active{
+    outline: none;
+ border:none;
+}
 
 .Toastify{
   z-index: 1000000000
