--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1126,13 +1126,12 @@ nav.bread {
 .item-card {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
-    padding: 1rem;
     background-color: white;
     border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     width: 100%;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .item-card-img {
@@ -1145,8 +1144,8 @@ nav.bread {
 
 .item-card-condition {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 0.5rem;
+    left: 0.5rem;
     padding: 0.25rem 1rem;
     background-color: #30714A;
     color: white;
@@ -1211,6 +1210,7 @@ nav.bread {
     flex-direction: column;
     gap: 0.5rem;
     width: 100%;
+    padding: 1rem;
 }
 
 @media (max-width: 768px) {
@@ -1226,4 +1226,61 @@ nav.bread {
     .item-card-details {
         gap: 0.25rem;
     }
+}
+
+.import-photos {
+    border: 2px dashed #cccccc;
+    padding: 20px;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    background-color: #f9f9f9;
+    border-radius: 0.5rem;
+}
+
+.import-photos:hover {
+    background-color: #f1f1f1;
+}
+
+.import-photos p {
+    margin: 0;
+    font-size: 16px;
+    color: #666;
+}
+
+.photos-preview {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 0.8rem;
+    width: 100%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+.photo-preview {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    flex-shrink: 0;
+}
+
+.photo-preview img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0.5rem;
+}
+
+.remove-photo-btn{
+    position: absolute;
+    top: 0.2rem;
+    right: 0.2rem;
+    background: #000000c7;
+    border-radius: 50rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
