--- a/client/src/index.css
+++ b/client/src/index.css
@@ -183,6 +183,9 @@ body {
 
 }
 
+.ofy-s{
+    overflow-y: scroll;
+}
 
 input[type=text], input[type=number], input[type=url], input[type=email], input[type=tel], input[type=password], input[type=datetime-local], input[type=time], input[type=date], textarea, select, .inputs {
     color: black;
